# GrowthableEmail

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
app/: config.py  db.py  main.py  worker.py
app/routers/: campaigns.py  media.py  slack.py  unsub.py  webhooks.py
app/services/: audience.py  bot.py  bot_base.py  brand_guide.md  broadcast.py  daily_report.py  dispatch.py  domains.py  ghl.py  guardrails.py  images.py  inbound.py  jobs.py  notify.py  ratelimit.py  renderer.py  reports.py  resend_client.py  resonance.py  sendtime.py  slack_client.py  social_bot.py  social_dispatch.py  suppressions.py  unsub_tokens.py  verification.py  verify_client.py  weekly_review.py  writeback.py
docs/: slack-bot-guide.md  spec.md
emails/: package-lock.json  package.json  render.tsx
emails/components/: Layout.tsx
emails/templates/: custom.tsx  newsletter.tsx  (+1 more)
tests/: conftest.py  helpers.py  test_api_campaigns.py  test_audience.py  test_bot.py  test_bot_history.py  test_broadcast.py  test_config.py  test_daily_report.py  test_dispatch.py  test_ghl.py  test_guardrails.py  test_images.py  test_inbound_and_domains.py  test_inbound_and_unsub.py  test_jobs.py  test_notify.py  test_outbound_enroll.py  test_renderer.py  test_resend_client.py  test_schema.py  test_slack_client.py  test_slack_events.py  test_slack_interactions.py  test_social_bot.py  test_social_dispatch.py  test_suppressions.py  test_timed_sends.py  test_unsub_tokens.py  test_verification.py  test_verify_client.py  test_webhook_resend.py  test_weekly_review.py  test_writeback.py
(+20 files in other folders)
